China Glass Done

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -3,5 +3,5 @@ distributionPath=wrapper/dists
 distributionUrl=https\://mirrors.cloud.tencent.com/gradle/gradle-8.5-bin.zip
 networkTimeout=10000
 validateDistributionUrl=true
-zipStoreBase=GRADLE_USER_HOME
+zipStoreBase=GRADLE_USER_HOMEå
 zipStorePath=wrapper/dists
