China Glass Done

--- a/build.gradle
+++ b/build.gradle
@@ -76,22 +76,22 @@ jar {
 	}
 }
 
-modrinth {
-	BufferedReader br = new BufferedReader(new InputStreamReader(System.in))
-	System.out.println("Input Modrinth token: ")
-	token = br.readLine()  // 输入你从此教程的“基础”部分获取到的令牌。
-	projectId = "PebMtyJT" // 在这里输入你的 Modrinth 项目 ID。
-	System.out.println("Input version number: ")
-	versionNumber = br.readLine()
-	System.out.println("Input version name: ")
-	versionName = br.readLine()
-	uploadFile = remapJar
-	System.out.println("Input game versions minotaur docs: ")
-	gameVersions = [br.readLine()]
-	System.out.println("Enter changelog: ")
-	changelog = br.readLine()
-	loaders = ["fabric"]
-}
+//modrinth {
+//	BufferedReader br = new BufferedReader(new InputStreamReader(System.in))
+//	System.out.println("Input Modrinth token: ")
+//	token = br.readLine()  // 输入你从此教程的“基础”部分获取到的令牌。
+//	projectId = "PebMtyJT" // 在这里输入你的 Modrinth 项目 ID。
+//	System.out.println("Input version number: ")
+//	versionNumber = br.readLine()
+//	System.out.println("Input version name: ")
+//	versionName = br.readLine()
+//	uploadFile = remapJar
+//	System.out.println("Input game versions minotaur docs: ")
+//	gameVersions = [br.readLine()]
+//	System.out.println("Enter changelog: ")
+//	changelog = br.readLine()
+//	loaders = ["fabric"]
+//}
 
 // configure the maven publication
 publishing {
