--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
           21,    # Current Java LTS
         ]
         # and run on both Linux and Windows
-        os: [ubuntu-22.04, windows-2022, macos-latest, macos-13]
+        os: [ubuntu-22.04, windows-2022, macos-latest, macos-13, windows-11]
     runs-on: ${{ matrix.os }}
     steps:
       - name: checkout repository
