--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,6 +3,7 @@
 # certain platforms or Java versions, and provides a first line of defence
 # against bad commits.
 # Junhax
+# Gradle
 
 name: build
 on: [pull_request, push]
