Now UPDATE! But not OK. Can't release now.

--- a/src/main/resources/data/glassworld/recipes/instant_health_apple.json
+++ b/src/main/resources/data/glassworld/recipes/instant_health_apple.json
@@ -3,14 +3,14 @@
   "pattern": [
     "ABA",
     "BAB",
-    "AB "
+    "ABA"
   ],
   "key": {
     "A": {
-      "tag": "minecraft:sand"
+      "tag": "minecraft:apple"
     },
     "B": {
-      "item": "minecraft:iron_nugget"
+      "item": "minecraft:golden_apple"
     }
   },
   "result": {
