--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,7 @@ jobs:
           21,    # Current Java LTS
         ]
         # and run on both Linux and Windows
-        os: [ubuntu-22.04, windows-2022, macos-latest, macos-13, macos-11, windows-2020, ubuntu-22.10]
+        os: [ubuntu-22.04, windows-2022, macos-latest, macos-13, macos-11, windows-latest, windows-2019, ubuntu-20.04]
     runs-on: ${{ matrix.os }}
     steps:
       - name: checkout repository
