--- a/src/main/resources/data/glassworld/recipes/instant_health_apple.json
+++ b/src/main/resources/data/glassworld/recipes/instant_health_apple.json
@@ -13,7 +13,7 @@
       "item": "minecraft:apple"
     },
     "A": {
-      "item": "glassworld.soft_ancient_glass"
+      "item": "glassworld:soft_ancient_glass"
     }
   },
   "result": {
