--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ loader_version=0.15.0
 #
 
 # Mod Properties
-mod_version=1.9.3
+mod_version=1.9.4-1.20.1
 maven_group=com.junhax.glassworld
 archives_base_name=glassworld
 
