Major Update-20240201-02 Untested

--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,18 @@ loom {
 			sourceSet sourceSets.client
 		}
 	}
+	runs {
+		// 这会添加一个运行数据生成 API 的新 gradle 任务："gradlew runDatagen"
+		datagen {
+			inherit server
+			name "Data Generation"
+			vmArg "-Dfabric-api.datagen"
+			vmArg "-Dfabric-api.datagen.output-dir=${file("src/main/generated")}"
+			vmArg "-Dfabric-api.datagen.modid=${modid}"
 
+			runDir "build/datagen"
+		}
+	}
 }
 
 dependencies {
@@ -92,5 +103,15 @@ publishing {
 		// Notice: This block does NOT have the same function as the block in the top level.
 		// The repositories here will be used for publishing your artifact, not for
 		// retrieving dependencies.
+	}
+}
+
+sourceSets {
+	main {
+		resources {
+			srcDirs += [
+					'src/main/generated'
+			]
+		}
 	}
 }
