--- a/gradle.properties
+++ b/gradle.properties
@@ -17,8 +17,7 @@ archives_base_name=glassworld
 
 # Dependencies
 fabric_version=0.91.0+1.20.1
-fabric_shield_lib_version=1.6.0-1.19
-fabric_asm_version=2.3
-cloth_version=8.1.77
-mod_menu_version=4.0.6
-crowdlin_version=1.4+1.19
+fabric_shield_lib_version=1.7.2-1.20.1
+midnightlib_version=1.4.1-fabric
+mod_menu_version=7.2.2
+fabricasm_version=2.3
