--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.4-SNAPSHOT'
+	id 'fabric-loom' version '1.5-SNAPSHOT'
 	id 'maven-publish'
 	id "com.modrinth.minotaur" version "2.+"
 }
@@ -32,6 +32,8 @@ repositories {
 	maven {
 		url = "https://api.modrinth.com/maven"
 	}
+	maven { url 'https://maven.aliyun.com/repository/public/' }
+	mavenLocal()
 }
 
 loom {
