--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,8 @@ fabric_shield_lib_version=1.7.2-1.20.1
 midnightlib_version=1.4.1-fabric
 mod_menu_version=7.2.2
 fabricasm_version=2.3
+
+# Mirror
+loom_resources_base=https://bmclapi2.bangbang93.com/assets/
+loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest.json
+loom_experimental_versions=https://maven.fabricmc.net/net/minecraft/experimental_versions.json
