--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx2G
+org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
 # Fabric Properties
@@ -11,17 +11,16 @@ loader_version=0.15.2
 
 # Mod Properties
 modid=glassworld
-mod_version=1.10.0
+mod_version=1.11.0
 maven_group=com.junhax.glassworld
 archives_base_name=glassworld
 
 # Dependencies
 fabric_version=0.91.0+1.20.1
-fabric_shield_lib_version=1.7.2-1.20.1
-midnightlib_version=1.4.1-fabric
-mod_menu_version=7.2.2
-fabricasm_version=2.3
-
+#fabric_shield_lib_version=1.7.2-1.20.1
+#midnightlib_version=1.4.1-fabric
+#mod_menu_version=7.2.2
+#fabricasm_version=2.3
 # Mirror
 loom_resources_base=https://bmclapi2.bangbang93.com/assets/
 loom_version_manifests=https://bmclapi2.bangbang93.com/mc/game/version_manifest.json
